[package]
name = "edit-ini"
version = "0.1.1"
edition = "2021"
authors = ["Chocobo1 <https://github.com/Chocobo1>"]
description = "Command line tool for editing .ini files"
homepage = "https://github.com/Chocobo1/edit-ini"
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
rust-ini = "0.21.1"
